--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://RRahul2004.github.io/",
+  "homepage": "https://RRahul2004.github.io/rahul-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
